<resources>
    <string name="app_name">The Jones Theory</string>

    //Login Strings
    <string name="prompt_username">Enter Username</string>
    <string name="prompt_password">Enter Password</string>
    <string name="action_sign_in">Login</string>
    <string name="invalid_username">This username is invalid</string>
    <string name="invalid_email">This email address is invalid</string>
    <string name="invalid_password">Password is too short</string>
    <string name="incorrect_password">Password is incorrect</string>
    <string name="field_required">This field is required</string>

    //Needs sorting
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="navigation_item_1">Home</string>
    <string name="navigation_item_2">Events</string>
    <string name="starred_string">Starred</string>
    <string name="inbox_string">Inbox</string>
    <string name="sent_mail_string">Sent mail</string>
    <string name="draft_string">Drafts</string>
    <string name="subheader">Subheader</string>
    <string name="trash_string">Trash</string>
    <string name="all_mail_string">All mails</string>
    <string name="spam_string">Spams</string>
    <string name="closeDrawer">Navigation View</string>
    <string name="openDrawer">Navigation View Closed</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="Title">The Jones Theory</string>
    <string name="SubTitle">Science. Life. Hobbies.</string>
    <string name="title_activity_fading_action_bar">FadingActionBar</string>
    <string name="title_activity_view_pager">ViewPager</string>
    <string name="aboutme">"If I have seen further than others, it is by standing upon the shoulders of giants." - Isaac Newton</string>
    <string name="register">Welcome!</string>
    <string name="Skip">Skip</string>
    <string name="SubscriptionTitle">SUBSCRIBE TO MY BLOG VIA EMAIL</string>
    <string name="SubscriptionText">Enter your email address to subscribe to this blog and receive notifications of new posts.</string>
    <string name="title_activity_post_selected">The Jones Theory</string>
    <string name ="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec lacus neque, maximus ut faucibus id, tristique nec massa. Vivamus faucibus, nulla ac ullamcorper pulvinar, libero felis luctus mauris, in consectetur nulla ante sit amet orci. Nam mattis dui massa, sed varius ligula dignissim vitae. Aliquam facilisis sem eget accumsan sodales. Aliquam at purus quam. Praesent finibus, odio quis accumsan tristique, justo mi ullamcorper eros, et posuere tortor felis sed nunc. Curabitur auctor tempor urna, nec condimentum eros dapibus eget. Curabitur eget nibh odio. Curabitur sagittis turpis ac est pretium vulputate. Sed mattis leo id dolor auctor imperdiet. Quisque tortor diam, condimentum ut pharetra eget, suscipit id nulla. Duis ut dui nec diam fringilla malesuada et eu erat.\n\n

Praesent condimentum eleifend lectus, auctor consequat eros ullamcorper sed. Ut vehicula lectus rhoncus arcu rutrum luctus. Morbi dignissim mauris nunc, quis dignissim nunc tincidunt vitae. Quisque hendrerit dapibus ante laoreet ornare. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Phasellus vitae ante sit amet tellus tristique dictum nec non orci. Duis et pharetra mauris, at luctus metus.\n\n

Proin sed mattis nibh. Proin vitae aliquam nisi, malesuada bibendum ante. Vestibulum auctor, lorem et dictum tincidunt, odio urna sollicitudin enim, eu dignissim risus ante ac mauris. Donec at quam ullamcorper, placerat mauris a, mattis leo. In faucibus ultricies tellus accumsan facilisis. Integer sollicitudin volutpat fringilla. Sed rhoncus lobortis iaculis. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In lobortis, lacus sed luctus fringilla, tellus nunc cursus purus, in posuere orci neque varius quam. Maecenas fringilla at erat vel feugiat.\n\n

Nam felis mauris, tempus sit amet purus sed, tempor ultricies velit. Nullam suscipit ornare facilisis. Nullam viverra posuere metus, sit amet convallis nibh fermentum in. Mauris consequat pulvinar ex, vitae condimentum nibh maximus a. Fusce placerat nulla non tincidunt molestie. Sed justo velit, tempus nec elit eu, lobortis mollis lorem. Nulla nisi est, aliquet nec finibus a, rhoncus a tellus. Vestibulum blandit faucibus magna, sit amet pretium nulla elementum eget. Vivamus malesuada consectetur metus eget accumsan. Vivamus justo augue, lacinia vel mauris ut, vehicula commodo massa. Cras ullamcorper eget quam a accumsan.\n\n

Donec in mauris sit amet magna maximus facilisis ac in dolor. Cras fermentum arcu vitae nisi pharetra, vel scelerisque enim tempus. Nunc vitae leo fringilla, auctor augue quis, porttitor urna. Morbi mi leo, efficitur nec congue eget, gravida vel arcu. Morbi quis turpis finibus, malesuada massa et, efficitur mi. Curabitur euismod justo egestas auctor volutpat. Phasellus diam nibh, tincidunt ut elit quis, mollis varius orci.</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="pref_previously_started">false</string>
    <string name="pref_title_stay_logged">Stay logged in</string>
    <string name="pref_description_stay_logged">Leave this checked if you want to stay logged in.</string>
    <string name="pref_title_prompt_login">Login prompt</string>
    <string name="pref_description_prompt_login">Prompt for authentication when not logged in.</string>
    <string name="register_password">  Registration | Forgot Password</string>
    <string name="facebook_app_id">377417352449004</string>
    <string name="title_activity_registration">Register</string>
    <string name="password_reset_hint">If you are resetting your password only enter your email address before clicking \'Reset\'.</string>
    <string name="submit">Submit</string>
    <string name="recover">Recover</string>
    <string name="action_login">Login</string>
    <string name="action_search">Search</string>
    <string name="confirm_username">Confirm Username / Email</string>
    <string name="prompt_email">Enter Email</string>
    <string name="example_name">Caleb Jones</string>
    <string name="lorem_ipsum_comment">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla molestie semper lobortis. Pellentesque elementum vehicula velit vel semper. Nullam ac turpis varius, mollis diam id, volutpat tellus. Duis luctus hendrerit ultricies. Quisque interdum pulvinar bibendum. Duis sollicitudin suscipit purus, vel cursus lacus ultrices nec. In blandit porttitor augue, in imperdiet turpis ultricies fermentum.\n\n
</string>
    <string name="title_activity_post_comments">PostComments</string>
    <string name="title_activity_dbtest">DBTest</string>
    <string name="loggedout_comment_message">Thanks for reading! Tell me your thoughts?</string>
    <string name="title_activity_intent_launcher">IntentLauncher</string>
    <string name="content_Description">Feature Image</string>
    <string name="permission_contact_rationale">Contacts permissions are needed to create an account.</string>
    <string name="permission_negative">No thanks.</string>
    <string name="tags_example">Tag: NASA, IFTT, Two Worlds</string>
    <string name="excerpt_example">This cosmic expanse of dust, gas, and stars covers some 6 degrees on the sky in the heroic constellation Perseus.</string>
    <string name="explore">Explore</string>
    <string name="share">Share</string>
    <string name="reply">Reply</string>
    <string name="favorite">Favorite</string>
    <string name="author">The Jones Theory</string>

</resources>
