<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:fitsSystemWindows="true"
    tools:context="me.calebjones.blogsite.activity.RegistrationActivity">

    <android.support.v7.widget.Toolbar
        android:id="@+id/regi_toolbar"
        android:layout_width="match_parent"
        android:elevation="4dp"
        android:layout_height="@dimen/abc_action_bar_default_height_material"
        android:minHeight="?attr/actionBarSize"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        android:background="@color/myPrimaryColor"
        android:fitsSystemWindows="true"
        />

    <LinearLayout
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">



        <me.calebjones.blogsite.util.FontFitTextView
            android:layout_width="310dp"
            android:layout_height="60dp"
            android:fontFamily="sans-serif-condensed"
            android:gravity="center"
            android:text="@string/Title"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal|top"
            android:textColor="#000000"
            android:textSize="48dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/SubTitle"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textStyle="bold"
            android:paddingBottom="16dp"/>

        <!--<View-->
            <!--android:layout_width="fill_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginRight="8dp"-->
            <!--android:background="#c0c0c0"-->
            <!--android:padding="8dp"/>-->

        <LinearLayout
            android:id="@+id/ll2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/card_margin"
            android:gravity="center_vertical|center_horizontal"
            android:orientation="vertical">

            <ProgressBar android:id="@+id/register_progress" style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content" android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center_horizontal" />

            <ScrollView android:id="@+id/register_form" android:layout_width="match_parent" android:layout_height="match_parent">

                <LinearLayout android:id="@+id/email_register_form" android:layout_width="match_parent" android:layout_height="wrap_content"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:text="@string/password_reset_hint"
                        android:id="@+id/passwordReset"
                        android:layout_gravity="center_horizontal"
                        android:layout_margin="16dp"/>

                    <LinearLayout  android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:orientation="vertical">

                        <AutoCompleteTextView android:id="@+id/registerEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/prompt_username"
                            android:inputType="textEmailAddress"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/myTextSecondaryColor"
                            android:textColor="@color/myTextPrimaryColor" />

                        <EditText android:id="@+id/registerUsername"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Username"
                            android:imeActionLabel="Submit"
                            android:imeOptions="actionUnspecified"
                            android:inputType="text"
                            android:maxLines="1"
                            android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/myTextSecondaryColor"
                            android:textColor="@color/myTextPrimaryColor" />

                        <EditText android:id="@+id/registerPassword" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="@string/prompt_password"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified" android:inputType="textPassword"
                            android:maxLines="1" android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/myTextSecondaryColor"
                            android:textColor="@color/myTextPrimaryColor" />

                        <EditText android:id="@+id/confirmPassword" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:hint="Confirm Password"
                            android:imeActionLabel="@string/action_sign_in"
                            android:imeOptions="actionUnspecified" android:inputType="textPassword"
                            android:maxLines="1" android:singleLine="true"
                            android:layout_marginBottom="10dp"
                            android:textColorHint="@color/myTextSecondaryColor"
                            android:textColor="@color/myTextPrimaryColor" />


                        <LinearLayout android:id="@+id/LoginButtons" android:layout_width="match_parent"
                            android:layout_height="wrap_content" android:orientation="horizontal"
                            android:layout_gravity="center"
                            android:gravity="center_horizontal"
                            android:baselineAligned="false"
                            android:weightSum="1">

                            <Button android:id="@+id/submit_button" style="@style/Base.Widget.AppCompat.Button"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/submit"
                                android:textStyle="bold"
                                android:textColor="#ffffffff"
                                android:elevation="10dp"
                                android:backgroundTint="@color/myPrimaryDarkColor"
                                android:layout_gravity="center|top"/>

                            <Button android:id="@+id/email_forgot" style="@style/Base.Widget.AppCompat.Button"
                                android:layout_width="wrap_content" android:layout_height="wrap_content"
                                android:layout_marginTop="16dp"
                                android:text="@string/recover"
                                android:textStyle="bold"
                                android:textColor="#ffffffff"
                                android:elevation="10dp"
                                android:backgroundTint="@color/myAccentColor"
                                android:layout_gravity="center|top"
                                android:layout_marginLeft="16dp" />
                        </LinearLayout>
                        <Space
                            android:layout_width="1dp"
                            android:layout_height="120dp"/>
                    </LinearLayout>
                </LinearLayout>
            </ScrollView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>
