<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="me.calebjones.blogsite.activity.LoginActivity">

    <include android:id="@+id/toolbar_actionbarLogin" layout="@layout/tool_bar"
        android:layout_width="match_parent" android:layout_height="wrap_content" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="160dp"
        android:id="@+id/imageView"
        android:src="@drawable/wallpaper"
        android:adjustViewBounds="true"
        android:scaleType="centerCrop"
        android:layout_gravity="center_horizontal"
        android:baselineAlignBottom="false"
        android:clickable="false"
        android:cropToPadding="false"
        android:focusable="false"
        android:focusableInTouchMode="false" />

        <LinearLayout
    android:layout_height="match_parent" android:gravity="center_horizontal" android:layout_width="fill_parent"
        android:orientation="vertical" android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <!-- Login progress -->


            <ScrollView android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:elevation="10dp">

            <LinearLayout android:id="@+id/email_login_form" android:layout_width="match_parent"
                android:layout_height="wrap_content" android:orientation="vertical"
                android:weightSum="1">

                <me.calebjones.blogsite.util.FontFitTextView
                    android:layout_width="310dp"
                    android:layout_height="80dp"
                    android:fontFamily="sans-serif-condensed"
                    android:gravity="center"
                    android:text="@string/Title"
                    android:id="@+id/textView"
                    android:layout_gravity="center_horizontal|top"
                    android:textColor="#000000"
                    android:textSize="48dp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:text="@string/SubTitle"
                    android:id="@+id/textView2"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:paddingBottom="16dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/aboutme"
                    android:id="@+id/textView3"
                    android:layout_gravity="center_horizontal"
                    android:textAlignment="center"
                    android:textStyle="italic"
                    android:paddingBottom="32dp"/>
                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/SubscriptionTitle"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="bold"
                    android:textColor="#000000"
                    android:paddingTop="8dp"
                    android:paddingBottom="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:text="@string/SubscriptionText"
                    android:layout_gravity="center_horizontal"
                    android:textStyle="normal"
                    android:paddingBottom="8dp"/>

                <View
                    android:layout_width="fill_parent"
                    android:layout_height="2dp"
                    android:background="#c0c0c0"
                    android:paddingBottom="32dp"/>

                <ProgressBar android:id="@+id/login_progress" style="?android:attr/progressBarStyleLarge"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp" android:visibility="gone"
                    android:layout_gravity="center_horizontal"
                    android:elevation="8dp"
                    android:paddingBottom="32dp"/>

            <LinearLayout
                android:id="@+id/login_form3"
                android:paddingTop="32dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_gravity="center_horizontal"
                    android:scaleType="fitCenter"
                    android:src="@drawable/ic_action_email"
                    android:elevation="10dp" />


                <AutoCompleteTextView android:id="@+id/email" android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress" android:maxLines="1"
                    android:singleLine="true"
                    android:elevation="10dp" />

            </LinearLayout>
                <LinearLayout
                    android:id="@+id/login_form2"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentTop="true"
                        android:layout_gravity="center_horizontal"
                        android:scaleType="fitCenter"
                        android:src="@drawable/ic_action_done"
                        android:elevation="10dp" />


                    <EditText android:id="@+id/email_confirm" android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:hint="Confirm Email"
                        android:inputType="textEmailAddress" android:maxLines="1"
                        android:singleLine="true"
                        android:elevation="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/login_form"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:orientation="horizontal"
                    android:layout_gravity="center"
                    android:gravity="center_horizontal">


                    <Button android:id="@+id/email_register_button" style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content" android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="4dp" android:text="@string/register"
                    android:textStyle="bold"
                    android:elevation="20dp"
                    android:gravity="center"
                        android:theme="@style/Theme.BlogSite" />
                </LinearLayout>

                </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>

